Change r/subreddits to links on homepage

--- a/web/index.html
+++ b/web/index.html
@@ -153,112 +153,112 @@
     <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.</p>
 
   <ul id="supported-subreddits">
-    <li>r/adviceponies
-    <li>r/ainbowdash
-    <li>r/applebloom
-    <li>r/applejack
-    <li>r/arborus
-    <li>r/babsquisition
-    <li>r/batquisition
-    <li>r/beautybrass
-    <li>r/berrytubelounge
-    <li>r/bigmacintosh
-    <li>r/bonquisition
-    <li>r/braeburnquisition
-    <li>r/clopclop
-    <li>r/cloudchasermotes
-    <li>r/comeinside
-    <li>r/cuttershy
-    <li>r/daylightemotes
-    <li>r/desktopponies
-    <li>r/falloutequestria
-    <li>r/flitter
-    <li>r/flutquisition
-    <li>r/flutterlounge
-    <li>r/futemotes
-    <li>r/gallopfrey
-    <li>r/himntor
-    <li>r/idliketobeatree
-    <li>r/ilovedashie
-    <li>r/lyra
-    <li>r/minuette
-    <li>r/mlas1animotes
-    <li>r/mlas1emotes2
-    <li>r/mlas1emotes
-    <li>r/mlas1imagedump
-    <li>r/mlas1party
-    <li>r/mlpdrawingschool
-    <li>r/mlplounge
-    <li>r/mlploungesteamgroup
-    <li>r/mlpvectors
-    <li>r/molestia
-    <li>r/mylittleadventuretime
-    <li>r/mylittlealicorn
-    <li>r/mylittlealcoholic
-    <li>r/mylittleandysonic1
-    <li>r/mylittleanime
-    <li>r/mylittleaprilfools
-    <li>r/mylittlebannertest
-    <li>r/mylittlecelestias
-    <li>r/mylittlechaos
-    <li>r/mylittlecirclejerk
-    <li>r/mylittlecombiners
-    <li>r/mylittleconspiracy
-    <li>r/mylittledaww
-    <li>r/mylittledurian
-    <li>r/mylittlefalloutdiary
-    <li>r/mylittlefoodmanes
-    <li>r/mylittlefortress
-    <li>r/mylittlefriends
-    <li>r/mylittleicons
-    <li>r/mylittlekindle
-    <li>r/mylittlekitchen
-    <li>r/mylittlelistentothis
-    <li>r/mylittlelivestream
-    <li>r/mylittlemango
-    <li>r/mylittlemilkyway
-    <li>r/mylittlemotorhead
-    <li>r/mylittlemusician
-    <li>r/mylittlenanners
-    <li>r/mylittlenopenopenope
-    <li>r/mylittlenosleep
-    <li>r/mylittlensfw
-    <li>r/mylittleonions
-    <li>r/mylittlepony
-    <li>r/mylittleserver
-    <li>r/mylittlesh
-    <li>r/mylittlesquidward
-    <li>r/mylittlesupportgroup
-    <li>r/mylittletacos
-    <li>r/mylittletwist
-    <li>r/mylittlewarhammer
-    <li>r/mylittlewelcomewagon
-    <li>r/mylittlewtf
-    <li>r/onetrueprincess
-    <li>r/pankakke
-    <li>r/pinkiepie
-    <li>r/pinkquisition
-    <li>r/ploungeafterdark
-    <li>r/ploungemafia
-    <li>r/ponyanarchism
-    <li>r/ponyloungerts
-    <li>r/pwettypwinkpwincesses
-    <li>r/roseluck
-    <li>r/rubypinch
-    <li>r/sapphirestone
-    <li>r/seriouslyluna
-    <li>r/speedingturtle
-    <li>r/surprise
-    <li>r/tacoshy
-    <li>r/taviquisition
-    <li>r/themirishponies
-    <li>r/thepleasurehub
-    <li>r/tbpimagedump
-    <li>r/tbpimagedump2
-    <li>r/thebestpony
-    <li>r/twidashmotes
-    <li>r/twilightsparkle
-    <li>r/vinylscratch
+    <li><a href="http://reddit.com/r/adviceponies">r/adviceponies</a>
+    <li><a href="http://reddit.com/r/ainbowdash">r/ainbowdash</a>
+    <li><a href="http://reddit.com/r/applebloom">r/applebloom</a>
+    <li><a href="http://reddit.com/r/applejack">r/applejack</a>
+    <li><a href="http://reddit.com/r/arborus">r/arborus</a>
+    <li><a href="http://reddit.com/r/babsquisition">r/babsquisition</a>
+    <li><a href="http://reddit.com/r/batquisition">r/batquisition</a>
+    <li><a href="http://reddit.com/r/beautybrass">r/beautybrass</a>
+    <li><a href="http://reddit.com/r/berrytubelounge">r/berrytubelounge</a>
+    <li><a href="http://reddit.com/r/bigmacintosh">r/bigmacintosh</a>
+    <li><a href="http://reddit.com/r/bonquisition">r/bonquisition</a>
+    <li><a href="http://reddit.com/r/braeburnquisition">r/braeburnquisition</a>
+    <li><a href="http://reddit.com/r/clopclop">r/clopclop</a>
+    <li><a href="http://reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
+    <li><a href="http://reddit.com/r/comeinside">r/comeinside</a>
+    <li><a href="http://reddit.com/r/cuttershy">r/cuttershy</a>
+    <li><a href="http://reddit.com/r/daylightemotes">r/daylightemotes</a>
+    <li><a href="http://reddit.com/r/desktopponies">r/desktopponies</a>
+    <li><a href="http://reddit.com/r/falloutequestria">r/falloutequestria</a>
+    <li><a href="http://reddit.com/r/flitter">r/flitter</a>
+    <li><a href="http://reddit.com/r/flutquisition">r/flutquisition</a>
+    <li><a href="http://reddit.com/r/flutterlounge">r/flutterlounge</a>
+    <li><a href="http://reddit.com/r/futemotes">r/futemotes</a>
+    <li><a href="http://reddit.com/r/gallopfrey">r/gallopfrey</a>
+    <li><a href="http://reddit.com/r/himntor">r/himntor</a>
+    <li><a href="http://reddit.com/r/idliketobeatree">r/idliketobeatree</a>
+    <li><a href="http://reddit.com/r/ilovedashie">r/ilovedashie</a>
+    <li><a href="http://reddit.com/r/lyra">r/lyra</a>
+    <li><a href="http://reddit.com/r/minuette">r/minuette</a>
+    <li><a href="http://reddit.com/r/mlas1animotes">r/mlas1animotes</a>
+    <li><a href="http://reddit.com/r/mlas1emotes2">r/mlas1emotes2</a>
+    <li><a href="http://reddit.com/r/mlas1emotes">r/mlas1emotes</a>
+    <li><a href="http://reddit.com/r/mlas1imagedump">r/mlas1imagedump</a>
+    <li><a href="http://reddit.com/r/mlas1party">r/mlas1party</a>
+    <li><a href="http://reddit.com/r/mlpdrawingschool">r/mlpdrawingschool</a>
+    <li><a href="http://reddit.com/r/mlplounge">r/mlplounge</a>
+    <li><a href="http://reddit.com/r/mlploungesteamgroup">r/mlploungesteamgroup</a>
+    <li><a href="http://reddit.com/r/mlpvectors">r/mlpvectors</a>
+    <li><a href="http://reddit.com/r/molestia">r/molestia</a>
+    <li><a href="http://reddit.com/r/mylittleadventuretime">r/mylittleadventuretime</a>
+    <li><a href="http://reddit.com/r/mylittlealicorn">r/mylittlealicorn</a>
+    <li><a href="http://reddit.com/r/mylittlealcoholic">r/mylittlealcoholic</a>
+    <li><a href="http://reddit.com/r/mylittleandysonic1">r/mylittleandysonic1</a>
+    <li><a href="http://reddit.com/r/mylittleanime">r/mylittleanime</a>
+    <li><a href="http://reddit.com/r/mylittleaprilfools">r/mylittleaprilfools</a>
+    <li><a href="http://reddit.com/r/mylittlebannertest">r/mylittlebannertest</a>
+    <li><a href="http://reddit.com/r/mylittlecelestias">r/mylittlecelestias</a>
+    <li><a href="http://reddit.com/r/mylittlechaos">r/mylittlechaos</a>
+    <li><a href="http://reddit.com/r/mylittlecirclejerk">r/mylittlecirclejerk</a>
+    <li><a href="http://reddit.com/r/mylittlecombiners">r/mylittlecombiners</a>
+    <li><a href="http://reddit.com/r/mylittleconspiracy">r/mylittleconspiracy</a>
+    <li><a href="http://reddit.com/r/mylittledaww">r/mylittledaww</a>
+    <li><a href="http://reddit.com/r/mylittledurian">r/mylittledurian</a>
+    <li><a href="http://reddit.com/r/mylittlefalloutdiary">r/mylittlefalloutdiary</a>
+    <li><a href="http://reddit.com/r/mylittlefoodmanes">r/mylittlefoodmanes</a>
+    <li><a href="http://reddit.com/r/mylittlefortress">r/mylittlefortress</a>
+    <li><a href="http://reddit.com/r/mylittlefriends">r/mylittlefriends</a>
+    <li><a href="http://reddit.com/r/mylittleicons">r/mylittleicons</a>
+    <li><a href="http://reddit.com/r/mylittlekindle">r/mylittlekindle</a>
+    <li><a href="http://reddit.com/r/mylittlekitchen">r/mylittlekitchen</a>
+    <li><a href="http://reddit.com/r/mylittlelistentothis">r/mylittlelistentothis</a>
+    <li><a href="http://reddit.com/r/mylittlelivestream">r/mylittlelivestream</a>
+    <li><a href="http://reddit.com/r/mylittlemango">r/mylittlemango</a>
+    <li><a href="http://reddit.com/r/mylittlemilkyway">r/mylittlemilkyway</a>
+    <li><a href="http://reddit.com/r/mylittlemotorhead">r/mylittlemotorhead</a>
+    <li><a href="http://reddit.com/r/mylittlemusician">r/mylittlemusician</a>
+    <li><a href="http://reddit.com/r/mylittlenanners">r/mylittlenanners</a>
+    <li><a href="http://reddit.com/r/mylittlenopenopenope">r/mylittlenopenopenope</a>
+    <li><a href="http://reddit.com/r/mylittlenosleep">r/mylittlenosleep</a>
+    <li><a href="http://reddit.com/r/mylittlensfw">r/mylittlensfw</a>
+    <li><a href="http://reddit.com/r/mylittleonions">r/mylittleonions</a>
+    <li><a href="http://reddit.com/r/mylittlepony">r/mylittlepony</a>
+    <li><a href="http://reddit.com/r/mylittleserver">r/mylittleserver</a>
+    <li><a href="http://reddit.com/r/mylittlesh">r/mylittlesh</a>
+    <li><a href="http://reddit.com/r/mylittlesquidward">r/mylittlesquidward</a>
+    <li><a href="http://reddit.com/r/mylittlesupportgroup">r/mylittlesupportgroup</a>
+    <li><a href="http://reddit.com/r/mylittletacos">r/mylittletacos</a>
+    <li><a href="http://reddit.com/r/mylittletwist">r/mylittletwist</a>
+    <li><a href="http://reddit.com/r/mylittlewarhammer">r/mylittlewarhammer</a>
+    <li><a href="http://reddit.com/r/mylittlewelcomewagon">r/mylittlewelcomewagon</a>
+    <li><a href="http://reddit.com/r/mylittlewtf">r/mylittlewtf</a>
+    <li><a href="http://reddit.com/r/onetrueprincess">r/onetrueprincess</a>
+    <li><a href="http://reddit.com/r/pankakke">r/pankakke</a>
+    <li><a href="http://reddit.com/r/pinkiepie">r/pinkiepie</a>
+    <li><a href="http://reddit.com/r/pinkquisition">r/pinkquisition</a>
+    <li><a href="http://reddit.com/r/ploungeafterdark">r/ploungeafterdark</a>
+    <li><a href="http://reddit.com/r/ploungemafia">r/ploungemafia</a>
+    <li><a href="http://reddit.com/r/ponyanarchism">r/ponyanarchism</a>
+    <li><a href="http://reddit.com/r/ponyloungerts">r/ponyloungerts</a>
+    <li><a href="http://reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
+    <li><a href="http://reddit.com/r/roseluck">r/roseluck</a>
+    <li><a href="http://reddit.com/r/rubypinch">r/rubypinch</a>
+    <li><a href="http://reddit.com/r/sapphirestone">r/sapphirestone</a>
+    <li><a href="http://reddit.com/r/seriouslyluna">r/seriouslyluna</a>
+    <li><a href="http://reddit.com/r/speedingturtle">r/speedingturtle</a>
+    <li><a href="http://reddit.com/r/surprise">r/surprise</a>
+    <li><a href="http://reddit.com/r/tacoshy">r/tacoshy</a>
+    <li><a href="http://reddit.com/r/taviquisition">r/taviquisition</a>
+    <li><a href="http://reddit.com/r/themirishponies">r/themirishponies</a>
+    <li><a href="http://reddit.com/r/thepleasurehub">r/thepleasurehub</a>
+    <li><a href="http://reddit.com/r/tbpimagedump">r/tbpimagedump</a>
+    <li><a href="http://reddit.com/r/tbpimagedump2">r/tbpimagedump2</a>
+    <li><a href="http://reddit.com/r/thebestpony">r/thebestpony</a>
+    <li><a href="http://reddit.com/r/twidashmotes">r/twidashmotes</a>
+    <li><a href="http://reddit.com/r/twilightsparkle">r/twilightsparkle</a>
+    <li><a href="http://reddit.com/r/vinylscratch">r/vinylscratch</a>
   </ul>
   <div class="clear"></div>
 
