Add a bunch of added subreddits to the web page list

--- a/web/index.html
+++ b/web/index.html
@@ -155,6 +155,7 @@
   <ul id="supported-subreddits">
     <li><a href="http://reddit.com/r/adviceponies">r/adviceponies</a>
     <li><a href="http://reddit.com/r/ainbowdash">r/ainbowdash</a>
+    <li><a href="http://reddit.com/r/anotherponymotessub">r/anotherponymotessub</a>
     <li><a href="http://reddit.com/r/applebloom">r/applebloom</a>
     <li><a href="http://reddit.com/r/applejack">r/applejack</a>
     <li><a href="http://reddit.com/r/arborus">r/arborus</a>
@@ -165,12 +166,14 @@
     <li><a href="http://reddit.com/r/bigmacintosh">r/bigmacintosh</a>
     <li><a href="http://reddit.com/r/bonquisition">r/bonquisition</a>
     <li><a href="http://reddit.com/r/braeburnquisition">r/braeburnquisition</a>
+    <li><a href="http://reddit.com/r/cianimotes">r/cianimotes</a>
     <li><a href="http://reddit.com/r/clopclop">r/clopclop</a>
     <li><a href="http://reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
     <li><a href="http://reddit.com/r/comeinside">r/comeinside</a>
     <li><a href="http://reddit.com/r/cuttershy">r/cuttershy</a>
     <li><a href="http://reddit.com/r/daylightemotes">r/daylightemotes</a>
     <li><a href="http://reddit.com/r/desktopponies">r/desktopponies</a>
+    <li><a href="http://reddit.com/r/equestriagirls">r/equestriagirls</a>
     <li><a href="http://reddit.com/r/falloutequestria">r/falloutequestria</a>
     <li><a href="http://reddit.com/r/flitter">r/flitter</a>
     <li><a href="http://reddit.com/r/flutquisition">r/flutquisition</a>
@@ -181,10 +184,11 @@
     <li><a href="http://reddit.com/r/idliketobeatree">r/idliketobeatree</a>
     <li><a href="http://reddit.com/r/ilovedashie">r/ilovedashie</a>
     <li><a href="http://reddit.com/r/lyra">r/lyra</a>
+    <li><a href="http://reddit.com/r/marmemotes">r/marmemotes</a>
     <li><a href="http://reddit.com/r/minuette">r/minuette</a>
     <li><a href="http://reddit.com/r/mlas1animotes">r/mlas1animotes</a>
-    <li><a href="http://reddit.com/r/mlas1emotes2">r/mlas1emotes2</a>
     <li><a href="http://reddit.com/r/mlas1emotes">r/mlas1emotes</a>
+    <li><a href="http://reddit.com/r/mlas1emotes2">r/mlas1emotes2</a>
     <li><a href="http://reddit.com/r/mlas1imagedump">r/mlas1imagedump</a>
     <li><a href="http://reddit.com/r/mlas1party">r/mlas1party</a>
     <li><a href="http://reddit.com/r/mlpdrawingschool">r/mlpdrawingschool</a>
@@ -242,6 +246,7 @@
     <li><a href="http://reddit.com/r/ploungemafia">r/ploungemafia</a>
     <li><a href="http://reddit.com/r/ponyanarchism">r/ponyanarchism</a>
     <li><a href="http://reddit.com/r/ponyloungerts">r/ponyloungerts</a>
+    <li><a href="http://reddit.com/r/ponymotes">r/ponymotes</a>
     <li><a href="http://reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
     <li><a href="http://reddit.com/r/roseluck">r/roseluck</a>
     <li><a href="http://reddit.com/r/rubypinch">r/rubypinch</a>
