--- a/web/index.html
+++ b/web/index.html
@@ -258,6 +258,7 @@
     <li><a href="http://reddit.com/r/taviquisition">r/taviquisition</a>
     <li><a href="http://reddit.com/r/tbpimagedump">r/tbpimagedump</a>
     <li><a href="http://reddit.com/r/tbpimagedump2">r/tbpimagedump2</a>
+    <li><a href="http://reddit.com/r/thecane">r/thecane</a>
     <li><a href="http://reddit.com/r/thebestpony">r/thebestpony</a>
     <li><a href="http://reddit.com/r/themirishponies">r/themirishponies</a>
     <li><a href="http://reddit.com/r/thepleasurehub">r/thepleasurehub</a>
