--- a/web/index.html
+++ b/web/index.html
@@ -264,6 +264,7 @@
     <li><a href="http://reddit.com/r/thepleasurehub">r/thepleasurehub</a>
     <li><a href="http://reddit.com/r/twidashmotes">r/twidashmotes</a>
     <li><a href="http://reddit.com/r/twilightsparkle">r/twilightsparkle</a>
+    <li><a href="http://reddit.com/r/twiquisition">r/twiquisition</a>
     <li><a href="http://reddit.com/r/vinylscratch">r/vinylscratch</a>
   </ul>
   <div class="clear"></div>
