--- a/web/index.html
+++ b/web/index.html
@@ -184,6 +184,7 @@
     <li><a href="http://reddit.com/r/idliketobeatree">r/idliketobeatree</a>
     <li><a href="http://reddit.com/r/ilovedashie">r/ilovedashie</a>
     <li><a href="http://reddit.com/r/lyra">r/lyra</a>
+    <li><a href="http://reddit.com/r/lyraquisition">r/lyraquisition</a>
     <li><a href="http://reddit.com/r/marmemotes">r/marmemotes</a>
     <li><a href="http://reddit.com/r/minuette">r/minuette</a>
     <li><a href="http://reddit.com/r/mlas1animotes">r/mlas1animotes</a>
