--- a/web/index.html
+++ b/web/index.html
@@ -254,6 +254,7 @@
     <li><a href="http://reddit.com/r/sapphirestone">r/sapphirestone</a>
     <li><a href="http://reddit.com/r/seriouslyluna">r/seriouslyluna</a>
     <li><a href="http://reddit.com/r/speedingturtle">r/speedingturtle</a>
+    <li><a href="http://reddit.com/r/spitquisition">r/spitquisition</a>
     <li><a href="http://reddit.com/r/surprise">r/surprise</a>
     <li><a href="http://reddit.com/r/tacoshy">r/tacoshy</a>
     <li><a href="http://reddit.com/r/taviquisition">r/taviquisition</a>
