--- a/web/index.html
+++ b/web/index.html
@@ -166,6 +166,7 @@
     <li><a href="http://reddit.com/r/bigmacintosh">r/bigmacintosh</a>
     <li><a href="http://reddit.com/r/bonquisition">r/bonquisition</a>
     <li><a href="http://reddit.com/r/braeburnquisition">r/braeburnquisition</a>
+    <li><a href="http://reddit.com/r/cadance">r/cadance</a>
     <li><a href="http://reddit.com/r/cianimotes">r/cianimotes</a>
     <li><a href="http://reddit.com/r/clopclop">r/clopclop</a>
     <li><a href="http://reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
