--- a/web/index.html
+++ b/web/index.html
@@ -177,6 +177,7 @@
     <li><a href="http://reddit.com/r/equestriagirls">r/equestriagirls</a>
     <li><a href="http://reddit.com/r/falloutequestria">r/falloutequestria</a>
     <li><a href="http://reddit.com/r/flitter">r/flitter</a>
+    <li><a href="http://reddit.com/r/flitterquisition">r/flitterquisition</a>
     <li><a href="http://reddit.com/r/flutquisition">r/flutquisition</a>
     <li><a href="http://reddit.com/r/flutterlounge">r/flutterlounge</a>
     <li><a href="http://reddit.com/r/futemotes">r/futemotes</a>
