Update DinsFire's emote pack link

--- a/web/index.html
+++ b/web/index.html
@@ -131,7 +131,7 @@
     still get the emotes on other platforms.
     <a href="https://play.google.com/store/apps/details?id=reddit.news">Reddit News</a>
     supports emotes via
-    <a href="http://reddit.com/r/MLPLounge/comments/15yzm4">this unofficial emote pack</a>
+    <a href="http://dinsfire.com/projects/reddit-emotes/">this unofficial emote pack</a>
     by <a href="http://reddit.com/user/DinsFire64">/u/DinsFire64</a>.</p>
   <div class="clear"></div>
 
