--- a/web/index.html
+++ b/web/index.html
@@ -221,6 +221,7 @@
     <li><a href="http://reddit.com/r/mylittleicons">r/mylittleicons</a>
     <li><a href="http://reddit.com/r/mylittlekindle">r/mylittlekindle</a>
     <li><a href="http://reddit.com/r/mylittlekitchen">r/mylittlekitchen</a>
+    <li><a href="http://reddit.com/r/mylittleleague">r/mylittleleague</a>
     <li><a href="http://reddit.com/r/mylittlelistentothis">r/mylittlelistentothis</a>
     <li><a href="http://reddit.com/r/mylittlelivestream">r/mylittlelivestream</a>
     <li><a href="http://reddit.com/r/mylittlemango">r/mylittlemango</a>
