--- a/web/index.html
+++ b/web/index.html
@@ -184,6 +184,7 @@
     <li><a href="http://reddit.com/r/futemotes">r/futemotes</a>
     <li><a href="http://reddit.com/r/gallopfrey">r/gallopfrey</a>
     <li><a href="http://reddit.com/r/himntor">r/himntor</a>
+    <li><a href="http://reddit.com/r/hugemotes">r/hugemotes</a>
     <li><a href="http://reddit.com/r/idliketobeatree">r/idliketobeatree</a>
     <li><a href="http://reddit.com/r/ilovedashie">r/ilovedashie</a>
     <li><a href="http://reddit.com/r/lyra">r/lyra</a>
