--- a/web/index.html
+++ b/web/index.html
@@ -257,6 +257,7 @@
     <li><a href="http://reddit.com/r/roseluck">r/roseluck</a>
     <li><a href="http://reddit.com/r/rubypinch">r/rubypinch</a>
     <li><a href="http://reddit.com/r/sapphirestone">r/sapphirestone</a>
+    <li><a href="http://reddit.com/r/scratchquisition">r/scratchquisition</a>
     <li><a href="http://reddit.com/r/seriouslyluna">r/seriouslyluna</a>
     <li><a href="http://reddit.com/r/speedingturtle">r/speedingturtle</a>
     <li><a href="http://reddit.com/r/spitquisition">r/spitquisition</a>
