--- a/web/index.html
+++ b/web/index.html
@@ -163,6 +163,7 @@
     <li><a href="http://reddit.com/r/babsquisition">r/babsquisition</a>
     <li><a href="http://reddit.com/r/batquisition">r/batquisition</a>
     <li><a href="http://reddit.com/r/beautybrass">r/beautybrass</a>
+    <li><a href="http://reddit.com/r/berrytrain">r/berrytrain</a>
     <li><a href="http://reddit.com/r/berrytubelounge">r/berrytubelounge</a>
     <li><a href="http://reddit.com/r/bigmacintosh">r/bigmacintosh</a>
     <li><a href="http://reddit.com/r/bonquisition">r/bonquisition</a>
