--- a/web/index.html
+++ b/web/index.html
@@ -265,6 +265,7 @@
     <li><a href="http://reddit.com/r/spitquisition">r/spitquisition</a>
     <li><a href="http://reddit.com/r/sunsetshimmer">r/sunsetshimmer</a>
     <li><a href="http://reddit.com/r/surprise">r/surprise</a>
+    <li><a href="http://reddit.com/r/sweetie_belle">r/sweetie_belle</a>
     <li><a href="http://reddit.com/r/tacoshy">r/tacoshy</a>
     <li><a href="http://reddit.com/r/taviquisition">r/taviquisition</a>
     <li><a href="http://reddit.com/r/tbpimagedump">r/tbpimagedump</a>
