--- a/web/index.html
+++ b/web/index.html
@@ -255,6 +255,7 @@
     <li><a href="http://reddit.com/r/ponyanarchism">r/ponyanarchism</a>
     <li><a href="http://reddit.com/r/ponyloungerts">r/ponyloungerts</a>
     <li><a href="http://reddit.com/r/ponymotes">r/ponymotes</a>
+    <li><a href="http://reddit.com/r/ponymotesextra">r/ponymotesextra</a>
     <li><a href="http://reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
     <li><a href="http://reddit.com/r/roseluck">r/roseluck</a>
     <li><a href="http://reddit.com/r/rubypinch">r/rubypinch</a>
