Fix index.html subreddit list

--- a/web/index.html
+++ b/web/index.html
@@ -153,7 +153,10 @@
     <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.</p>
 
   <ul id="supported-subreddits">
+    <li><a href="http://reddit.com/r/adery">r/adery</a>
+    <li><a href="http://reddit.com/r/ademotes">r/ademotes</a>
     <li><a href="http://reddit.com/r/adviceponies">r/adviceponies</a>
+    <li><a href="http://reddit.com/r/afterplounge">r/afterplounge</a>
     <li><a href="http://reddit.com/r/ainbowdash">r/ainbowdash</a>
     <li><a href="http://reddit.com/r/anotherponymotessub">r/anotherponymotessub</a>
     <li><a href="http://reddit.com/r/applebloom">r/applebloom</a>
@@ -173,7 +176,6 @@
     <li><a href="http://reddit.com/r/cianimotes">r/cianimotes</a>
     <li><a href="http://reddit.com/r/clopclop">r/clopclop</a>
     <li><a href="http://reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
-    <li><a href="http://reddit.com/r/comeinside">r/comeinside</a>
     <li><a href="http://reddit.com/r/cuttershy">r/cuttershy</a>
     <li><a href="http://reddit.com/r/daylightemotes">r/daylightemotes</a>
     <li><a href="http://reddit.com/r/desktopponies">r/desktopponies</a>
@@ -194,8 +196,6 @@
     <li><a href="http://reddit.com/r/marmemotes">r/marmemotes</a>
     <li><a href="http://reddit.com/r/minuette">r/minuette</a>
     <li><a href="http://reddit.com/r/mlas1animotes">r/mlas1animotes</a>
-    <li><a href="http://reddit.com/r/mlas1emotes">r/mlas1emotes</a>
-    <li><a href="http://reddit.com/r/mlas1emotes2">r/mlas1emotes2</a>
     <li><a href="http://reddit.com/r/mlas1imagedump">r/mlas1imagedump</a>
     <li><a href="http://reddit.com/r/mlpdrawingschool">r/mlpdrawingschool</a>
     <li><a href="http://reddit.com/r/mlplounge">r/mlplounge</a>
