--- a/web/index.html
+++ b/web/index.html
@@ -194,6 +194,7 @@
     <li><a href="http://reddit.com/r/lyra">r/lyra</a>
     <li><a href="http://reddit.com/r/lyraquisition">r/lyraquisition</a>
     <li><a href="http://reddit.com/r/marmemotes">r/marmemotes</a>
+    <li><a href="http://reddit.com/r/maudpie">r/maudpie</a>
     <li><a href="http://reddit.com/r/minuette">r/minuette</a>
     <li><a href="http://reddit.com/r/mlas1animotes">r/mlas1animotes</a>
     <li><a href="http://reddit.com/r/mlas1imagedump">r/mlas1imagedump</a>
