--- a/web/index.html
+++ b/web/index.html
@@ -280,6 +280,7 @@
     <li><a href="http://reddit.com/r/twilightsparkle">r/twilightsparkle</a>
     <li><a href="http://reddit.com/r/twiquisition">r/twiquisition</a>
     <li><a href="http://reddit.com/r/vinylscratch">r/vinylscratch</a>
+    <li><a href="http://reddit.com/r/zponymotes">r/zponymotes</a>
   </ul>
   <div class="clear"></div>
 
