--- a/web/index.html
+++ b/web/index.html
@@ -161,6 +161,7 @@
     <li><a href="http://reddit.com/r/anotherponymotessub">r/anotherponymotessub</a>
     <li><a href="http://reddit.com/r/applebloom">r/applebloom</a>
     <li><a href="http://reddit.com/r/appledashquisition">r/appledashquisition</a>
+    <li><a href="http://reddit.com/r/applefritter">r/applefritter</a>
     <li><a href="http://reddit.com/r/applejack">r/applejack</a>
     <li><a href="http://reddit.com/r/arborus">r/arborus</a>
     <li><a href="http://reddit.com/r/babsquisition">r/babsquisition</a>
