--- a/web/index.html
+++ b/web/index.html
@@ -176,6 +176,7 @@
     <li><a href="http://reddit.com/r/cheesesandwichmlp">r/cheesesandwichmlp</a>
     <li><a href="http://reddit.com/r/cianimotes">r/cianimotes</a>
     <li><a href="http://reddit.com/r/clopclop">r/clopclop</a>
+    <li><a href="http://reddit.com/r/clopmotes">r/clopmotes</a>
     <li><a href="http://reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
     <li><a href="http://reddit.com/r/cuttershy">r/cuttershy</a>
     <li><a href="http://reddit.com/r/daylightemotes">r/daylightemotes</a>
