Update website text for dinsfire's android app

--- a/web/index.html
+++ b/web/index.html
@@ -127,12 +127,12 @@
 
   <h3>Other Platforms</h3>
   <img src="redditnews-logo.png" alt="">
-  <p>Although BPM itself needs at least UserScript support, you can sometimes
-    still get the emotes on other platforms.
-    <a href="https://play.google.com/store/apps/details?id=reddit.news">Reddit News</a>
-    supports emotes via
-    <a href="http://dinsfire.com/projects/reddit-emotes/">this unofficial emote pack</a>
-    by <a href="http://reddit.com/user/DinsFire64">/u/DinsFire64</a>.</p>
+  <p>Although BetterPonymotes itself only works in a browser,
+    <a href="http://reddit.com/user/DinsFire64">/u/DinsFire64</a> maintains
+    <a href="http://dinsfire.com/projects/reddit-emotes/">PonyMotes for Android</a>,
+    which supports the entirety of BPM's emote set and works well in combination with
+    <a href="https://play.google.com/store/apps/details?id=reddit.news">Reddit News</a>.
+  <p>No support for other Android reddit applications or iOS devices is available.</p>
   <div class="clear"></div>
 
   <h3>Updates</h3>
