Remove Opera support

--- a/web/index.html
+++ b/web/index.html
@@ -99,7 +99,7 @@
     locate BetterPonymotes in the list, and click the "Preferences" button.
     Then click the second "Preferences" button.</p>
 
-  <h3>Chrome</h3>
+  <h3>Chrome &amp; Opera 15+</h3>
   <img src="chrome-logo.png" alt="">
   <p>BetterPonymotes is available on the Chrome Webstore
     <a href="https://chrome.google.com/webstore/detail/betterponymotes/bkkmhlceghomaajdimmejkhldnpleoea">here</a>.
@@ -108,15 +108,7 @@
     (<code>chrome:extensions</code>, or wrench menu -> Settings, then click
     Extensions on the left), locate BetterPonymotes in the list, and click the
     "Options" link below.</p>
-
-  <h3>Opera</h3>
-  <img src="opera-logo.png" alt="">
-  <p>Install the addon from <a href="betterponymotes.oex"><code>betterponymotes.oex</code></a>.</p>
-  <p>Opera should handle the file automatically. If not, download the file and
-    drag it onto the Extensions page at Opera -> Extensions -> Manage Extensions.</p>
-  <p>To access preferences on Opera, go to the Extensions page (Opera ->
-    Extensions -> Manage Extensions), locate BetterPonymotes in the list, and
-    click the wrench icon -> Preferences.</p>
+  <p>Opera users are advised to find their browser's equivalent.</p>rb
 
   <h3>Safari &amp; Other Browsers</h3>
   <p>A userscript variant is available <a href="betterponymotes.user.js">here</a>.
