Remove userscript support

--- a/web/index.html
+++ b/web/index.html
@@ -108,23 +108,17 @@
     (<code>chrome:extensions</code>, or wrench menu -> Settings, then click
     Extensions on the left), locate BetterPonymotes in the list, and click the
     "Options" link below.</p>
-  <p>Opera users are advised to find their browser's equivalent.</p>rb
-
-  <h3>Safari &amp; Other Browsers</h3>
-  <p>A userscript variant is available <a href="betterponymotes.user.js">here</a>.
-    You will need to install <a href="https://github.com/os0x/NinjaKit">NinjaKit</a>
-    in order to run UserScripts on Safari, so get that first.</p>
-  <p>Other browsers <em>may</em> work, if they can be made to run UserScripts.</p>
-  <p>Options can be changed by going <a href="options.html">here</a>.</p>
+  <p>Opera users are advised to find their browser's equivalent.</p>
 
   <h3>Other Platforms</h3>
   <img src="redditnews-logo.png" alt="">
-  <p>Although BetterPonymotes itself only works in a browser,
+  <p>Although BetterPonymotes itself only works in supported browsers,
     <a href="http://reddit.com/user/DinsFire64">/u/DinsFire64</a> maintains
     <a href="http://dinsfire.com/projects/reddit-emotes/">PonyMotes for Android</a>,
     which supports the entirety of BPM's emote set and works well in combination with
     <a href="https://play.google.com/store/apps/details?id=reddit.news">Reddit News</a>.
-  <p>No support for other Android reddit applications or iOS devices is available.</p>
+  <p>No support for other browsers, other Android reddit applications, or iOS
+    devices is available.</p>
   <div class="clear"></div>
 
   <h3>Updates</h3>
