--- a/web/index.html
+++ b/web/index.html
@@ -137,136 +137,137 @@
     <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.</p>
 
   <ul id="supported-subreddits">
-    <li><a href="http://reddit.com/r/adery">r/adery</a>
-    <li><a href="http://reddit.com/r/ademotes">r/ademotes</a>
-    <li><a href="http://reddit.com/r/adviceponies">r/adviceponies</a>
-    <li><a href="http://reddit.com/r/afterplounge">r/afterplounge</a>
-    <li><a href="http://reddit.com/r/ainbowdash">r/ainbowdash</a>
-    <li><a href="http://reddit.com/r/anotherponymotessub">r/anotherponymotessub</a>
-    <li><a href="http://reddit.com/r/applebloom">r/applebloom</a>
-    <li><a href="http://reddit.com/r/appledashquisition">r/appledashquisition</a>
-    <li><a href="http://reddit.com/r/applefritter">r/applefritter</a>
-    <li><a href="http://reddit.com/r/applejack">r/applejack</a>
-    <li><a href="http://reddit.com/r/arborus">r/arborus</a>
-    <li><a href="http://reddit.com/r/babsquisition">r/babsquisition</a>
-    <li><a href="http://reddit.com/r/batquisition">r/batquisition</a>
-    <li><a href="http://reddit.com/r/beautybrass">r/beautybrass</a>
-    <li><a href="http://reddit.com/r/berrytrain">r/berrytrain</a>
-    <li><a href="http://reddit.com/r/berrytubelounge">r/berrytubelounge</a>
-    <li><a href="http://reddit.com/r/bigmacintosh">r/bigmacintosh</a>
-    <li><a href="http://reddit.com/r/bonquisition">r/bonquisition</a>
-    <li><a href="http://reddit.com/r/braeburnquisition">r/braeburnquisition</a>
-    <li><a href="http://reddit.com/r/cadance">r/cadance</a>
-    <li><a href="http://reddit.com/r/cheesesandwichmlp">r/cheesesandwichmlp</a>
-    <li><a href="http://reddit.com/r/cianimotes">r/cianimotes</a>
-    <li><a href="http://reddit.com/r/clopclop">r/clopclop</a>
-    <li><a href="http://reddit.com/r/clopmotes">r/clopmotes</a>
-    <li><a href="http://reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
-    <li><a href="http://reddit.com/r/cuttershy">r/cuttershy</a>
-    <li><a href="http://reddit.com/r/daylightemotes">r/daylightemotes</a>
-    <li><a href="http://reddit.com/r/desktopponies">r/desktopponies</a>
-    <li><a href="http://reddit.com/r/equestriagirls">r/equestriagirls</a>
-    <li><a href="http://reddit.com/r/falloutequestria">r/falloutequestria</a>
-    <li><a href="http://reddit.com/r/flitter">r/flitter</a>
-    <li><a href="http://reddit.com/r/flitterquisition">r/flitterquisition</a>
-    <li><a href="http://reddit.com/r/flutquisition">r/flutquisition</a>
-    <li><a href="http://reddit.com/r/flutterlounge">r/flutterlounge</a>
-    <li><a href="http://reddit.com/r/futemotes">r/futemotes</a>
-    <li><a href="http://reddit.com/r/gallopfrey">r/gallopfrey</a>
-    <li><a href="http://reddit.com/r/himntor">r/himntor</a>
-    <li><a href="http://reddit.com/r/hugemotes">r/hugemotes</a>
-    <li><a href="http://reddit.com/r/idliketobeatree">r/idliketobeatree</a>
-    <li><a href="http://reddit.com/r/ilovedashie">r/ilovedashie</a>
-    <li><a href="http://reddit.com/r/lyra">r/lyra</a>
-    <li><a href="http://reddit.com/r/lyraquisition">r/lyraquisition</a>
-    <li><a href="http://reddit.com/r/marmemotes">r/marmemotes</a>
-    <li><a href="http://reddit.com/r/maudpie">r/maudpie</a>
-    <li><a href="http://reddit.com/r/minuette">r/minuette</a>
-    <li><a href="http://reddit.com/r/mlas1animotes">r/mlas1animotes</a>
-    <li><a href="http://reddit.com/r/mlas1imagedump">r/mlas1imagedump</a>
-    <li><a href="http://reddit.com/r/mlpdrawingschool">r/mlpdrawingschool</a>
-    <li><a href="http://reddit.com/r/mlplounge">r/mlplounge</a>
-    <li><a href="http://reddit.com/r/mlploungesteamgroup">r/mlploungesteamgroup</a>
-    <li><a href="http://reddit.com/r/mlpvectors">r/mlpvectors</a>
-    <li><a href="http://reddit.com/r/molestia">r/molestia</a>
-    <li><a href="http://reddit.com/r/mylittleadventuretime">r/mylittleadventuretime</a>
-    <li><a href="http://reddit.com/r/mylittlealcoholic">r/mylittlealcoholic</a>
-    <li><a href="http://reddit.com/r/mylittlealicorn">r/mylittlealicorn</a>
-    <li><a href="http://reddit.com/r/mylittleandysonic1">r/mylittleandysonic1</a>
-    <li><a href="http://reddit.com/r/mylittleanime">r/mylittleanime</a>
-    <li><a href="http://reddit.com/r/mylittleaprilfools">r/mylittleaprilfools</a>
-    <li><a href="http://reddit.com/r/mylittlebannertest">r/mylittlebannertest</a>
-    <li><a href="http://reddit.com/r/mylittlecelestias">r/mylittlecelestias</a>
-    <li><a href="http://reddit.com/r/mylittlechaos">r/mylittlechaos</a>
-    <li><a href="http://reddit.com/r/mylittlecirclejerk">r/mylittlecirclejerk</a>
-    <li><a href="http://reddit.com/r/mylittlecombiners">r/mylittlecombiners</a>
-    <li><a href="http://reddit.com/r/mylittleconspiracy">r/mylittleconspiracy</a>
-    <li><a href="http://reddit.com/r/mylittledaww">r/mylittledaww</a>
-    <li><a href="http://reddit.com/r/mylittledurian">r/mylittledurian</a>
-    <li><a href="http://reddit.com/r/mylittlefalloutdiary">r/mylittlefalloutdiary</a>
-    <li><a href="http://reddit.com/r/mylittlefoodmanes">r/mylittlefoodmanes</a>
-    <li><a href="http://reddit.com/r/mylittlefortress">r/mylittlefortress</a>
-    <li><a href="http://reddit.com/r/mylittlefriends">r/mylittlefriends</a>
-    <li><a href="http://reddit.com/r/mylittleicons">r/mylittleicons</a>
-    <li><a href="http://reddit.com/r/mylittlekindle">r/mylittlekindle</a>
-    <li><a href="http://reddit.com/r/mylittlekitchen">r/mylittlekitchen</a>
-    <li><a href="http://reddit.com/r/mylittleleague">r/mylittleleague</a>
-    <li><a href="http://reddit.com/r/mylittlelistentothis">r/mylittlelistentothis</a>
-    <li><a href="http://reddit.com/r/mylittlelivestream">r/mylittlelivestream</a>
-    <li><a href="http://reddit.com/r/mylittlemango">r/mylittlemango</a>
-    <li><a href="http://reddit.com/r/mylittlemilkyway">r/mylittlemilkyway</a>
-    <li><a href="http://reddit.com/r/mylittlemotorhead">r/mylittlemotorhead</a>
-    <li><a href="http://reddit.com/r/mylittlemusician">r/mylittlemusician</a>
-    <li><a href="http://reddit.com/r/mylittlenanners">r/mylittlenanners</a>
-    <li><a href="http://reddit.com/r/mylittlenopenopenope">r/mylittlenopenopenope</a>
-    <li><a href="http://reddit.com/r/mylittlenosleep">r/mylittlenosleep</a>
-    <li><a href="http://reddit.com/r/mylittlensfw">r/mylittlensfw</a>
-    <li><a href="http://reddit.com/r/mylittleonions">r/mylittleonions</a>
-    <li><a href="http://reddit.com/r/mylittlepony">r/mylittlepony</a>
-    <li><a href="http://reddit.com/r/mylittleserver">r/mylittleserver</a>
-    <li><a href="http://reddit.com/r/mylittlesh">r/mylittlesh</a>
-    <li><a href="http://reddit.com/r/mylittlesquidward">r/mylittlesquidward</a>
-    <li><a href="http://reddit.com/r/mylittlesupportgroup">r/mylittlesupportgroup</a>
-    <li><a href="http://reddit.com/r/mylittletacos">r/mylittletacos</a>
-    <li><a href="http://reddit.com/r/mylittletwist">r/mylittletwist</a>
-    <li><a href="http://reddit.com/r/mylittlewarhammer">r/mylittlewarhammer</a>
-    <li><a href="http://reddit.com/r/mylittlewelcomewagon">r/mylittlewelcomewagon</a>
-    <li><a href="http://reddit.com/r/mylittlewtf">r/mylittlewtf</a>
-    <li><a href="http://reddit.com/r/onetrueprincess">r/onetrueprincess</a>
-    <li><a href="http://reddit.com/r/pankakke">r/pankakke</a>
-    <li><a href="http://reddit.com/r/pinkiepie">r/pinkiepie</a>
-    <li><a href="http://reddit.com/r/pinkquisition">r/pinkquisition</a>
-    <li><a href="http://reddit.com/r/ploungeafterdark">r/ploungeafterdark</a>
-    <li><a href="http://reddit.com/r/ploungemafia">r/ploungemafia</a>
-    <li><a href="http://reddit.com/r/ponyanarchism">r/ponyanarchism</a>
-    <li><a href="http://reddit.com/r/ponyloungerts">r/ponyloungerts</a>
-    <li><a href="http://reddit.com/r/ponymotes">r/ponymotes</a>
-    <li><a href="http://reddit.com/r/ponymotesextra">r/ponymotesextra</a>
-    <li><a href="http://reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
-    <li><a href="http://reddit.com/r/roseluck">r/roseluck</a>
-    <li><a href="http://reddit.com/r/rubypinch">r/rubypinch</a>
-    <li><a href="http://reddit.com/r/sapphirestone">r/sapphirestone</a>
-    <li><a href="http://reddit.com/r/scratchquisition">r/scratchquisition</a>
-    <li><a href="http://reddit.com/r/seriouslyluna">r/seriouslyluna</a>
-    <li><a href="http://reddit.com/r/speedingturtle">r/speedingturtle</a>
-    <li><a href="http://reddit.com/r/spitquisition">r/spitquisition</a>
-    <li><a href="http://reddit.com/r/sunsetshimmer">r/sunsetshimmer</a>
-    <li><a href="http://reddit.com/r/surprise">r/surprise</a>
-    <li><a href="http://reddit.com/r/sweetie_belle">r/sweetie_belle</a>
-    <li><a href="http://reddit.com/r/tacoshy">r/tacoshy</a>
-    <li><a href="http://reddit.com/r/taviquisition">r/taviquisition</a>
-    <li><a href="http://reddit.com/r/tbpimagedump">r/tbpimagedump</a>
-    <li><a href="http://reddit.com/r/tbpimagedump2">r/tbpimagedump2</a>
-    <li><a href="http://reddit.com/r/thecane">r/thecane</a>
-    <li><a href="http://reddit.com/r/thebestpony">r/thebestpony</a>
-    <li><a href="http://reddit.com/r/themirishponies">r/themirishponies</a>
-    <li><a href="http://reddit.com/r/thepleasurehub">r/thepleasurehub</a>
-    <li><a href="http://reddit.com/r/trixquisition">r/trixquisition</a>
-    <li><a href="http://reddit.com/r/twidashmotes">r/twidashmotes</a>
-    <li><a href="http://reddit.com/r/twilightsparkle">r/twilightsparkle</a>
-    <li><a href="http://reddit.com/r/twiquisition">r/twiquisition</a>
-    <li><a href="http://reddit.com/r/vinylscratch">r/vinylscratch</a>
-    <li><a href="http://reddit.com/r/zponymotes">r/zponymotes</a>
+    <li><a href="https://www.reddit.com/r/adery">r/adery</a>
+    <li><a href="https://www.reddit.com/r/ademotes">r/ademotes</a>
+    <li><a href="https://www.reddit.com/r/adviceponies">r/adviceponies</a>
+    <li><a href="https://www.reddit.com/r/afterplounge">r/afterplounge</a>
+    <li><a href="https://www.reddit.com/r/ainbowdash">r/ainbowdash</a>
+    <li><a href="https://www.reddit.com/r/anotherponymotessub">r/anotherponymotessub</a>
+    <li><a href="https://www.reddit.com/r/applebloom">r/applebloom</a>
+    <li><a href="https://www.reddit.com/r/appledashquisition">r/appledashquisition</a>
+    <li><a href="https://www.reddit.com/r/applefritter">r/applefritter</a>
+    <li><a href="https://www.reddit.com/r/applejack">r/applejack</a>
+    <li><a href="https://www.reddit.com/r/arborus">r/arborus</a>
+    <li><a href="https://www.reddit.com/r/babsquisition">r/babsquisition</a>
+    <li><a href="https://www.reddit.com/r/batquisition">r/batquisition</a>
+    <li><a href="https://www.reddit.com/r/beautybrass">r/beautybrass</a>
+    <li><a href="https://www.reddit.com/r/berrytrain">r/berrytrain</a>
+    <li><a href="https://www.reddit.com/r/berrytubelounge">r/berrytubelounge</a>
+    <li><a href="https://www.reddit.com/r/bigmacintosh">r/bigmacintosh</a>
+    <li><a href="https://www.reddit.com/r/bonquisition">r/bonquisition</a>
+    <li><a href="https://www.reddit.com/r/braeburnquisition">r/braeburnquisition</a>
+    <li><a href="https://www.reddit.com/r/cadance">r/cadance</a>
+    <li><a href="https://www.reddit.com/r/cheesesandwichmlp">r/cheesesandwichmlp</a>
+    <li><a href="https://www.reddit.com/r/cianimotes">r/cianimotes</a>
+    <li><a href="https://www.reddit.com/r/clopclop">r/clopclop</a>
+    <li><a href="https://www.reddit.com/r/clopmotes">r/clopmotes</a>
+    <li><a href="https://www.reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
+    <li><a href="https://www.reddit.com/r/cuttershy">r/cuttershy</a>
+    <li><a href="https://www.reddit.com/r/daylightemotes">r/daylightemotes</a>
+    <li><a href="https://www.reddit.com/r/desktopponies">r/desktopponies</a>
+    <li><a href="https://www.reddit.com/r/equestriagirls">r/equestriagirls</a>
+    <li><a href="https://www.reddit.com/r/falloutequestria">r/falloutequestria</a>
+    <li><a href="https://www.reddit.com/r/flitter">r/flitter</a>
+    <li><a href="https://www.reddit.com/r/flitterquisition">r/flitterquisition</a>
+    <li><a href="https://www.reddit.com/r/flutquisition">r/flutquisition</a>
+    <li><a href="https://www.reddit.com/r/flutterlounge">r/flutterlounge</a>
+    <li><a href="https://www.reddit.com/r/futemotes">r/futemotes</a>
+    <li><a href="https://www.reddit.com/r/gallopfrey">r/gallopfrey</a>
+    <li><a href="https://www.reddit.com/r/hugemotes">r/hugemotes</a>
+    <li><a href="https://www.reddit.com/r/idliketobeatree">r/idliketobeatree</a>
+    <li><a href="https://www.reddit.com/r/ilovedashie">r/ilovedashie</a>
+    <li><a href="https://www.reddit.com/r/lyra">r/lyra</a>
+    <li><a href="https://www.reddit.com/r/lyraquisition">r/lyraquisition</a>
+    <li><a href="https://www.reddit.com/r/marmemotes">r/marmemotes</a>
+    <li><a href="https://www.reddit.com/r/maudpie">r/maudpie</a>
+    <li><a href="https://www.reddit.com/r/minuette">r/minuette</a>
+    <li><a href="https://www.reddit.com/r/mlas1animotes">r/mlas1animotes</a>
+    <li><a href="https://www.reddit.com/r/mlpdrawingschool">r/mlpdrawingschool</a>
+    <li><a href="https://www.reddit.com/r/mlplounge">r/mlplounge</a>
+    <li><a href="https://www.reddit.com/r/mlploungesteamgroup">r/mlploungesteamgroup</a>
+    <li><a href="https://www.reddit.com/r/mlpoc">r/mlpoc</a>
+    <li><a href="https://www.reddit.com/r/mlpvectors">r/mlpvectors</a>
+    <li><a href="https://www.reddit.com/r/molestia">r/molestia</a>
+    <li><a href="https://www.reddit.com/r/mylittleadventuretime">r/mylittleadventuretime</a>
+    <li><a href="https://www.reddit.com/r/mylittlealcoholic">r/mylittlealcoholic</a>
+    <li><a href="https://www.reddit.com/r/mylittlealicorn">r/mylittlealicorn</a>
+    <li><a href="https://www.reddit.com/r/mylittleandysonic1">r/mylittleandysonic1</a>
+    <li><a href="https://www.reddit.com/r/mylittleanime">r/mylittleanime</a>
+    <li><a href="https://www.reddit.com/r/mylittleaprilfools">r/mylittleaprilfools</a>
+    <li><a href="https://www.reddit.com/r/mylittlebannertest">r/mylittlebannertest</a>
+    <li><a href="https://www.reddit.com/r/mylittlecelestias">r/mylittlecelestias</a>
+    <li><a href="https://www.reddit.com/r/mylittlechaos">r/mylittlechaos</a>
+    <li><a href="https://www.reddit.com/r/mylittlecirclejerk">r/mylittlecirclejerk</a>
+    <li><a href="https://www.reddit.com/r/mylittlecombiners">r/mylittlecombiners</a>
+    <li><a href="https://www.reddit.com/r/mylittleconspiracy">r/mylittleconspiracy</a>
+    <li><a href="https://www.reddit.com/r/mylittledaww">r/mylittledaww</a>
+    <li><a href="https://www.reddit.com/r/mylittledurian">r/mylittledurian</a>
+    <li><a href="https://www.reddit.com/r/mylittlefalloutdiary">r/mylittlefalloutdiary</a>
+    <li><a href="https://www.reddit.com/r/mylittlefoodmanes">r/mylittlefoodmanes</a>
+    <li><a href="https://www.reddit.com/r/mylittlefortress">r/mylittlefortress</a>
+    <li><a href="https://www.reddit.com/r/mylittlefriends">r/mylittlefriends</a>
+    <li><a href="https://www.reddit.com/r/mylittleicons">r/mylittleicons</a>
+    <li><a href="https://www.reddit.com/r/mylittlekindle">r/mylittlekindle</a>
+    <li><a href="https://www.reddit.com/r/mylittlekitchen">r/mylittlekitchen</a>
+    <li><a href="https://www.reddit.com/r/mylittleleague">r/mylittleleague</a>
+    <li><a href="https://www.reddit.com/r/mylittlelistentothis">r/mylittlelistentothis</a>
+    <li><a href="https://www.reddit.com/r/mylittlelivestream">r/mylittlelivestream</a>
+    <li><a href="https://www.reddit.com/r/mylittlemango">r/mylittlemango</a>
+    <li><a href="https://www.reddit.com/r/mylittlemilkyway">r/mylittlemilkyway</a>
+    <li><a href="https://www.reddit.com/r/mylittlemotorhead">r/mylittlemotorhead</a>
+    <li><a href="https://www.reddit.com/r/mylittlemusician">r/mylittlemusician</a>
+    <li><a href="https://www.reddit.com/r/mylittlenanners">r/mylittlenanners</a>
+    <li><a href="https://www.reddit.com/r/mylittlenopenopenope">r/mylittlenopenopenope</a>
+    <li><a href="https://www.reddit.com/r/mylittlenosleep">r/mylittlenosleep</a>
+    <li><a href="https://www.reddit.com/r/mylittlensfw">r/mylittlensfw</a>
+    <li><a href="https://www.reddit.com/r/mylittleonions">r/mylittleonions</a>
+    <li><a href="https://www.reddit.com/r/mylittlepony">r/mylittlepony</a>
+    <li><a href="https://www.reddit.com/r/mylittleserver">r/mylittleserver</a>
+    <li><a href="https://www.reddit.com/r/mylittlesh">r/mylittlesh</a>
+    <li><a href="https://www.reddit.com/r/mylittlesquidward">r/mylittlesquidward</a>
+    <li><a href="https://www.reddit.com/r/mylittlesupportgroup">r/mylittlesupportgroup</a>
+    <li><a href="https://www.reddit.com/r/mylittletacos">r/mylittletacos</a>
+    <li><a href="https://www.reddit.com/r/mylittletwist">r/mylittletwist</a>
+    <li><a href="https://www.reddit.com/r/mylittlewarhammer">r/mylittlewarhammer</a>
+    <li><a href="https://www.reddit.com/r/mylittlewelcomewagon">r/mylittlewelcomewagon</a>
+    <li><a href="https://www.reddit.com/r/mylittlewtf">r/mylittlewtf</a>
+    <li><a href="https://www.reddit.com/r/onetrueprincess">r/onetrueprincess</a>
+    <li><a href="https://www.reddit.com/r/pankakke">r/pankakke</a>
+    <li><a href="https://www.reddit.com/r/pinkiepie">r/pinkiepie</a>
+    <li><a href="https://www.reddit.com/r/pinkquisition">r/pinkquisition</a>
+    <li><a href="https://www.reddit.com/r/ploungeafterdark">r/ploungeafterdark</a>
+    <li><a href="https://www.reddit.com/r/ploungemafia">r/ploungemafia</a>
+    <li><a href="https://www.reddit.com/r/ponyanarchism">r/ponyanarchism</a>
+    <li><a href="https://www.reddit.com/r/ponyloungerts">r/ponyloungerts</a>
+    <li><a href="https://www.reddit.com/r/ponymotes">r/ponymotes</a>
+    <li><a href="https://www.reddit.com/r/ponymotesextra">r/ponymotesextra</a>
+    <li><a href="https://www.reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
+    <li><a href="https://www.reddit.com/r/roseluck">r/roseluck</a>
+    <li><a href="https://www.reddit.com/r/rubypinch">r/rubypinch</a>
+    <li><a href="https://www.reddit.com/r/sapphirestone">r/sapphirestone</a>
+    <li><a href="https://www.reddit.com/r/scratchquisition">r/scratchquisition</a>
+    <li><a href="https://www.reddit.com/r/seriouslyluna">r/seriouslyluna</a>
+    <li><a href="https://www.reddit.com/r/sgap">r/sgap</a>
+    <li><a href="https://www.reddit.com/r/spanishmeerkat">r/spanishmeerkat</a>
+    <li><a href="https://www.reddit.com/r/speedingturtle">r/speedingturtle</a>
+    <li><a href="https://www.reddit.com/r/spitquisition">r/spitquisition</a>
+    <li><a href="https://www.reddit.com/r/sunsetshimmer">r/sunsetshimmer</a>
+    <li><a href="https://www.reddit.com/r/surprise">r/surprise</a>
+    <li><a href="https://www.reddit.com/r/sweetie_belle">r/sweetie_belle</a>
+    <li><a href="https://www.reddit.com/r/tacoshy">r/tacoshy</a>
+    <li><a href="https://www.reddit.com/r/taviquisition">r/taviquisition</a>
+    <li><a href="https://www.reddit.com/r/tbpimagedump">r/tbpimagedump</a>
+    <li><a href="https://www.reddit.com/r/tbpimagedump2">r/tbpimagedump2</a>
+    <li><a href="https://www.reddit.com/r/thecane">r/thecane</a>
+    <li><a href="https://www.reddit.com/r/thebestpony">r/thebestpony</a>
+    <li><a href="https://www.reddit.com/r/themirishponies">r/themirishponies</a>
+    <li><a href="https://www.reddit.com/r/thepleasurehub">r/thepleasurehub</a>
+    <li><a href="https://www.reddit.com/r/trixquisition">r/trixquisition</a>
+    <li><a href="https://www.reddit.com/r/twidashmotes">r/twidashmotes</a>
+    <li><a href="https://www.reddit.com/r/twilightsparkle">r/twilightsparkle</a>
+    <li><a href="https://www.reddit.com/r/twiquisition">r/twiquisition</a>
+    <li><a href="https://www.reddit.com/r/vinylscratch">r/vinylscratch</a>
+    <li><a href="https://www.reddit.com/r/zponymotes">r/zponymotes</a>
   </ul>
   <div class="clear"></div>
 
