--- a/web/index.html
+++ b/web/index.html
@@ -162,6 +162,7 @@
     <li><a href="https://www.reddit.com/r/clopclop">r/clopclop</a>
     <li><a href="https://www.reddit.com/r/clopmotes">r/clopmotes</a>
     <li><a href="https://www.reddit.com/r/cloudchasermotes">r/cloudchasermotes</a>
+    <li><a href="https://www.reddit.com/r/colgateinquisition">r/colgateinquisition</a>
     <li><a href="https://www.reddit.com/r/cuttershy">r/cuttershy</a>
     <li><a href="https://www.reddit.com/r/daylightemotes">r/daylightemotes</a>
     <li><a href="https://www.reddit.com/r/desktopponies">r/desktopponies</a>
