--- a/web/index.html
+++ b/web/index.html
@@ -242,6 +242,7 @@
     <li><a href="https://www.reddit.com/r/ponyloungerts">r/ponyloungerts</a>
     <li><a href="https://www.reddit.com/r/ponymotes">r/ponymotes</a>
     <li><a href="https://www.reddit.com/r/ponymotesextra">r/ponymotesextra</a>
+    <li><a href="https://www.reddit.com/r/ponymotesextra2">r/ponymotesextra2</a>
     <li><a href="https://www.reddit.com/r/pwettypwinkpwincesses">r/pwettypwinkpwincesses</a>
     <li><a href="https://www.reddit.com/r/roseluck">r/roseluck</a>
     <li><a href="https://www.reddit.com/r/rubypinch">r/rubypinch</a>
