--- a/web/index.html
+++ b/web/index.html
@@ -172,6 +172,7 @@
     <li><a href="https://www.reddit.com/r/flitterquisition">r/flitterquisition</a>
     <li><a href="https://www.reddit.com/r/flutquisition">r/flutquisition</a>
     <li><a href="https://www.reddit.com/r/flutterlounge">r/flutterlounge</a>
+    <li><a href="https://www.reddit.com/r/freepizzaspizzashop">r/freepizzaspizzashop</a>
     <li><a href="https://www.reddit.com/r/futemotes">r/futemotes</a>
     <li><a href="https://www.reddit.com/r/gallopfrey">r/gallopfrey</a>
     <li><a href="https://www.reddit.com/r/hugemotes">r/hugemotes</a>
