--- a/web/index.html
+++ b/web/index.html
@@ -154,6 +154,7 @@
     <li><a href="https://www.reddit.com/r/berrytrain">r/berrytrain</a>
     <li><a href="https://www.reddit.com/r/berrytubelounge">r/berrytubelounge</a>
     <li><a href="https://www.reddit.com/r/bigmacintosh">r/bigmacintosh</a>
+    <li><a href="https://www.reddit.com/r/bloomjackquisition">r/bloomjackquisition</a>
     <li><a href="https://www.reddit.com/r/bonquisition">r/bonquisition</a>
     <li><a href="https://www.reddit.com/r/braeburnquisition">r/braeburnquisition</a>
     <li><a href="https://www.reddit.com/r/cadance">r/cadance</a>
