--- a/web/index.html
+++ b/web/index.html
@@ -137,6 +137,7 @@
     <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.</p>
 
   <ul id="supported-subreddits">
+    <li><a href="https://www.reddit.com/r/adagiodazzle">r/adagiodazzle</a>
     <li><a href="https://www.reddit.com/r/adery">r/adery</a>
     <li><a href="https://www.reddit.com/r/ademotes">r/ademotes</a>
     <li><a href="https://www.reddit.com/r/adviceponies">r/adviceponies</a>
