--- a/web/index.html
+++ b/web/index.html
@@ -261,6 +261,7 @@
     <li><a href="https://www.reddit.com/r/sunsetshimmer">r/sunsetshimmer</a>
     <li><a href="https://www.reddit.com/r/surprise">r/surprise</a>
     <li><a href="https://www.reddit.com/r/sweetie_belle">r/sweetie_belle</a>
+    <li><a href="https://www.reddit.com/r/sweetiebot">r/sweetiebot</a>
     <li><a href="https://www.reddit.com/r/tacoshy">r/tacoshy</a>
     <li><a href="https://www.reddit.com/r/taviquisition">r/taviquisition</a>
     <li><a href="https://www.reddit.com/r/tbpimagedump">r/tbpimagedump</a>
