--- a/web/index.html
+++ b/web/index.html
@@ -254,6 +254,7 @@
     <li><a href="https://www.reddit.com/r/scratchquisition">r/scratchquisition</a>
     <li><a href="https://www.reddit.com/r/seriouslyluna">r/seriouslyluna</a>
     <li><a href="https://www.reddit.com/r/sgap">r/sgap</a>
+    <li><a href="https://www.reddit.com/r/sombra">r/sombra</a>
     <li><a href="https://www.reddit.com/r/sonatadusk">r/sonatadusk</a>
     <li><a href="https://www.reddit.com/r/spanishmeerkat">r/spanishmeerkat</a>
     <li><a href="https://www.reddit.com/r/speedingturtle">r/speedingturtle</a>
