--- a/web/index.html
+++ b/web/index.html
@@ -251,6 +251,7 @@
     <li><a href="https://www.reddit.com/r/roseluck">r/roseluck</a>
     <li><a href="https://www.reddit.com/r/rubypinch">r/rubypinch</a>
     <li><a href="https://www.reddit.com/r/sapphirestone">r/sapphirestone</a>
+    <li><a href="https://www.reddit.com/r/scootalounge">r/scootalounge</a>
     <li><a href="https://www.reddit.com/r/scratchquisition">r/scratchquisition</a>
     <li><a href="https://www.reddit.com/r/seriouslyluna">r/seriouslyluna</a>
     <li><a href="https://www.reddit.com/r/sgap">r/sgap</a>
