Some site updates

--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
     will work across the site.</p>
 
   <h3>Features</h3>
-  <p><b>Over one hundred subreddits and 5,000 emotes.</b> Never miss another
+  <p><b>Over 140 subreddits and 9,000 emotes.</b> Never miss another
     hidden emote.</p>
 
   <p><b>Powerful built in search.</b> Search by name, subreddit, or even by tag-
@@ -71,44 +71,27 @@
 
   <p><b>Easy configuration.</b> Every option easily accessible.</p>
 
-  <p><b>Chaos script built in.</b> Rotate, flip, and spin flags.</p>
+  <p><b>Chaos script built in.</b> Rotate, flip, spin flags, and more.</p>
 
   <p><b>Emote click blocker.</b></p>
-
-  <!-- Yeah. I went there. -->
-  <p><b>Solid and stable.</b> Bugs happen, but BetterPonymotes is thoroughly
-    tested before every release. Secure and careful coding means Derpy can't
-    accidentally mess it up.</p>
-
-  <p><b>Native addon.</b> BetterPonymotes integrates with your browser better
-    than any userscript can.</p>
 
   <h3>Installation</h3>
   <p>Before installing, remember to remove any other emote scripts you have
     installed. BetterPonymotes replaces all of them and then some, and leaving
-    them will slow your browser down unnecessarily (or even cause conflicts).
-    Remember to check your UserScripts as well, if you have any.</p>
+    them will slow your browser down or cause conflicts. Remember to check your
+    UserScripts as well, if you have any.</p>
 
   <h3>Firefox &amp; Firefox Mobile</h3>
   <img src="firefox-logo.png" alt="">
   <p>Install the addon from <a href="betterponymotes.xpi"><code>betterponymotes.xpi</code></a>.</p>
   <p>Firefox should handle the file automatically. If not, download the file and
     drag it onto Firefox.</p>
-  <p>To access preferences on Firefox, go to the Addons Manager
-    (<code>about:addons</code>, Ctrl-Shift-A, or Firefox menu -> Add-ons),
-    locate BetterPonymotes in the list, and click the "Preferences" button.
-    Then click the second "Preferences" button.</p>
 
   <h3>Chrome &amp; Opera 15+</h3>
   <img src="chrome-logo.png" alt="">
   <p>BetterPonymotes is available on the Chrome Webstore
     <a href="https://chrome.google.com/webstore/detail/betterponymotes/bkkmhlceghomaajdimmejkhldnpleoea">here</a>.
     Or, just click: <button onclick="chrome.webstore.install()">Install</button></p>
-  <p>To access preferences on Chrome, go to the Extensions page
-    (<code>chrome:extensions</code>, or wrench menu -> Settings, then click
-    Extensions on the left), locate BetterPonymotes in the list, and click the
-    "Options" link below.</p>
-  <p>Opera users are advised to find their browser's equivalent.</p>
 
   <h3>Other Platforms</h3>
   <img src="redditnews-logo.png" alt="">
