--- a/web/index.html
+++ b/web/index.html
@@ -162,6 +162,7 @@
     <li><a href="https://www.reddit.com/r/freepizzaspizzashop">r/freepizzaspizzashop</a>
     <li><a href="https://www.reddit.com/r/futemotes">r/futemotes</a>
     <li><a href="https://www.reddit.com/r/gallopfrey">r/gallopfrey</a>
+    <li><a href="https://www.reddit.com/r/glimmerquisition">r/glimmerquisition</a>
     <li><a href="https://www.reddit.com/r/hugemotes">r/hugemotes</a>
     <li><a href="https://www.reddit.com/r/idliketobeatree">r/idliketobeatree</a>
     <li><a href="https://www.reddit.com/r/ilovedashie">r/ilovedashie</a>
