--- a/web/index.html
+++ b/web/index.html
@@ -223,6 +223,7 @@
     <li><a href="https://www.reddit.com/r/mylittlewtf">r/mylittlewtf</a>
     <li><a href="https://www.reddit.com/r/onetrueprincess">r/onetrueprincess</a>
     <li><a href="https://www.reddit.com/r/pankakke">r/pankakke</a>
+    <li><a href="https://www.reddit.com/r/partyfavor">r/partyfavor</a>
     <li><a href="https://www.reddit.com/r/pinkiepie">r/pinkiepie</a>
     <li><a href="https://www.reddit.com/r/pinkquisition">r/pinkquisition</a>
     <li><a href="https://www.reddit.com/r/ploungeafterdark">r/ploungeafterdark</a>
