--- a/web/index.html
+++ b/web/index.html
@@ -246,6 +246,7 @@
     <li><a href="https://www.reddit.com/r/spanishmeerkat">r/spanishmeerkat</a>
     <li><a href="https://www.reddit.com/r/speedingturtle">r/speedingturtle</a>
     <li><a href="https://www.reddit.com/r/spitquisition">r/spitquisition</a>
+    <li><a href="https://www.reddit.com/r/sugarbelle">r/sugarbelle</a>
     <li><a href="https://www.reddit.com/r/sunsetshimmer">r/sunsetshimmer</a>
     <li><a href="https://www.reddit.com/r/surprise">r/surprise</a>
     <li><a href="https://www.reddit.com/r/sweetie_belle">r/sweetie_belle</a>
