Convert a few more http -> https links

--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
 
   <p>BetterPonymotes is a browser addon to display ponymotes across Reddit. This
     means things like <code>[]<!---->(/c01)</code> will work outside of
-    <a href="http://reddit.com/r/mylittlepony">r/mylittlepony</a>, but also
+    <a href="https://www.reddit.com/r/mylittlepony">r/mylittlepony</a>, but also
     that ponymotes from other subreddits (such as <code>[]<!---->(/rose6)</code>)
     will work across the site.</p>
 
@@ -122,13 +122,13 @@
 
   <h3>Feedback</h3>
   <p>Bug reports, feature requests, questions, general feedback or anything
-    else should be directed to <a href="http://reddit.com/r/betterponymotes">the
+    else should be directed to <a href="https://www.reddit.com/r/betterponymotes">the
     subreddit</a>.</p>
 
   <h3>Supported Subreddits</h3>
   <p>BetterPonymotes gets its emotes from the following subreddits. If yours
     isn't on this list, and you'd like it to be, make a request on
-    <a href="http://reddit.com/r/betterponymotes">r/betterponymotes</a>.</p>
+    <a href="https://www.reddit.com/r/betterponymotes">r/betterponymotes</a>.</p>
 
   <ul id="supported-subreddits">
     <li><a href="https://www.reddit.com/r/adagiodazzle">r/adagiodazzle</a>
