--- a/web/index.html
+++ b/web/index.html
@@ -272,6 +272,7 @@
     <li><a href="https://www.reddit.com/r/themirishponies">r/themirishponies</a>
     <li><a href="https://www.reddit.com/r/thepleasurehub">r/thepleasurehub</a>
     <li><a href="https://www.reddit.com/r/trixquisition">r/trixquisition</a>
+    <li><a href="https://www.reddit.com/r/troubleshoes">r/troubleshoes</a>
     <li><a href="https://www.reddit.com/r/twidashmotes">r/twidashmotes</a>
     <li><a href="https://www.reddit.com/r/twilightsparkle">r/twilightsparkle</a>
     <li><a href="https://www.reddit.com/r/twiquisition">r/twiquisition</a>
