--- a/web/index.html
+++ b/web/index.html
@@ -240,6 +240,7 @@
     <li><a href="https://www.reddit.com/r/ploungeafterdark">r/ploungeafterdark</a>
     <li><a href="https://www.reddit.com/r/ploungemafia">r/ploungemafia</a>
     <li><a href="https://www.reddit.com/r/ponyanarchism">r/ponyanarchism</a>
+    <li><a href="https://www.reddit.com/r/ponycountdown">r/ponycountdown</a>
     <li><a href="https://www.reddit.com/r/ponyloungerts">r/ponyloungerts</a>
     <li><a href="https://www.reddit.com/r/ponymotes">r/ponymotes</a>
     <li><a href="https://www.reddit.com/r/ponymotesextra">r/ponymotesextra</a>
