Remove jquery from options page

--- a/addon/options.html
+++ b/addon/options.html
@@ -6,7 +6,6 @@
   <link href="bootstrap.css" rel="stylesheet">
   <link href="options.css" rel="stylesheet">
   <script src="bpm-resources.js" type="text/javascript"></script>
-  <script src="jquery-1.8.2.js" type="text/javascript"></script>
   <script src="options.js" type="text/javascript"></script>
 </head>
 <body>
@@ -150,7 +149,7 @@
       <div class="span6">
         <label>Add a subreddit:
           <span class="input-prepend input-append">
-            <span class="add-on">r/</span>
+            <span class="add-on">/r/</span>
             <input id="add-custom-subreddit" type="text" onsubmit="return false;">
             <!-- Weird bootstrap bug -->
             <button type="button" id="add-subreddit" class="btn add-on" style="height: inherit" onsubmit="return false;">Add</button>
